--- a/new/index.html
+++ b/new/index.html
@@ -1,137 +1,363 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
-  <meta charset="UTF-8">
-  <title>Workflow Editor</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Workflow Editor – single ID + readonly ID field</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: #121619;
+      color: white;
+      display: flex;
+      height: 100vh;
+    }
+
+    .editor-container {
+      display: flex;
+      width: 100%;
+    }
+
+    .workflow-panel, .json-panel {
+      flex: 1;
+      padding: 20px;
+      box-sizing: border-box;
+      overflow-y: auto;
+    }
+
+    .workflow {
+      max-width: 800px;
+    }
+
+    .top-form {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+
+    .form-item {
+      display: flex;
+      flex-direction: column;
+      font-size: 12px;
+    }
+
+    .form-item label {
+      margin-bottom: 4px;
+      color: #ccc;
+    }
+
+    .form-item input,
+    .form-item select {
+      background-color: #1f252b;
+      color: white;
+      border: none;
+      padding: 6px 8px;
+      border-radius: 4px;
+      font-size: 14px;
+      min-width: 120px;
+    }
+
+    .action {
+      background-color: #1e242a;
+      border-radius: 6px;
+      margin-bottom: 15px;
+    }
+
+    .action-header {
+      background-color: #2c3740;
+      border-radius: 4px;
+      padding: 8px 12px;
+      font-weight: bold;
+      font-size: 14px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .chevron {
+      font-size: 14px;
+    }
+
+    .action-body {
+      padding: 10px 12px;
+      display: block;
+    }
+
+    .row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 10px;
+      flex-wrap: wrap;
+    }
+
+    .row label {
+      font-size: 11px;
+      width: 80px;
+    }
+
+    .row input,
+    .row select {
+      background-color: #2a2f35;
+      color: white;
+      border: none;
+      padding: 6px;
+      border-radius: 4px;
+      font-size: 14px;
+      flex: 1;
+      min-width: 100px;
+    }
+
+    .add-attribute {
+      display: inline-block;
+      margin-top: 6px;
+      color: #7dcfff;
+      font-size: 13px;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .add-attribute:hover {
+      text-decoration: underline;
+    }
+
+    .attribute-popup {
+      display: none;
+      background-color: #1f2a33;
+      padding: 8px;
+      border-radius: 6px;
+      margin-top: 8px;
+      flex-wrap: wrap;
+      gap: 5px;
+    }
+
+    .attribute-popup.active {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .attribute-popup button {
+      background-color: #2c3740;
+      color: #7dcfff;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 12px;
+    }
+
+    .json-panel {
+      background-color: #181e22;
+      border-left: 2px solid #2a2f35;
+    }
+
+    .json-panel textarea {
+      width: 100%;
+      height: calc(100% - 50px);
+      background-color: #1e1e1e;
+      color: #dcdcdc;
+      border: none;
+      padding: 10px;
+      font-family: monospace;
+      font-size: 14px;
+      resize: none;
+      border-radius: 6px;
+    }
+
+    .json-panel button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background-color: #2a2f35;
+      color: #7dcfff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .json-panel button:hover {
+      background-color: #3a4550;
+    }
+
+    .error {
+      color: red;
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
-  <div class="workflow">
-    <!-- Horní řádek -->
-    <div class="top-form">
-      <div class="form-item">
-        <label>id</label>
-        <input type="text" value="100">
-      </div>
-      <div class="form-item">
-        <label>name</label>
-        <input type="text" value="areaB ⇒ areaA">
-      </div>
-      <div class="form-item">
-        <label>status</label>
-        <select>
-          <option>99</option>
-        </select>
-      </div>
+  <div class="editor-container">
+    <div class="workflow-panel">
+      <div id="app"></div>
     </div>
-
-    <!-- Action (0) -->
-    <div class="action">
-      <div class="action-header">
-        <span>Action (0)</span>
-        <span class="chevron">▾</span>
-      </div>
-      <div class="action-body">
-        <div class="row">
-          <label>“0”</label>
-          <input type="text" value="0">
-          <label>action</label>
-          <select>
-            <option>pickup</option>
-          </select>
-        </div>
-        <div class="row">
-          <label>target</label>
-          <select>
-            <option>stationarea</option>
-          </select>
-          <input type="text" value="areaA">
-        </div>
-        <a href="#" class="add-attribute" data-popup="popup-0">+ add action attribute</a>
-        <div class="attribute-popup" id="popup-0">
-          <button>+ event</button>
-          <button>+ max_speed</button>
-          <button>+ max_retries</button>
-          <button>+ acceleration</button>
-          <button>+ autoskip</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Action (2) -->
-    <div class="action">
-      <div class="action-header">
-        <span>Action (2)</span>
-        <span class="chevron">▾</span>
-      </div>
-      <div class="action-body">
-        <div class="row">
-          <label>“0”</label>
-          <input type="text" value="2">
-          <label>action</label>
-          <select>
-            <option>drop</option>
-          </select>
-        </div>
-        <div class="row">
-          <label>target</label>
-          <select>
-            <option>station</option>
-          </select>
-          <input type="text" value="pal1">
-        </div>
-        <div class="row deletable">
-          <label>max_speed</label>
-          <input type="text" value="300">
-          <button class="delete-btn">🗑</button>
-        </div>
-        <div class="row deletable">
-          <label>max_retries</label>
-          <input type="text" value="1">
-          <button class="delete-btn">🗑</button>
-        </div>
-        <div class="row">
-          <label>event</label>
-          <select>
-            <option>no_station_left</option>
-          </select>
-          <select>
-            <option>order_cancel</option>
-          </select>
-        </div>
-        <a href="#" class="add-attribute" data-popup="popup-2">+ add action attribute</a>
-        <div class="attribute-popup" id="popup-2">
-          <button>+ event</button>
-          <button>+ max_speed</button>
-          <button>+ max_retries</button>
-          <button>+ acceleration</button>
-          <button>+ autoskip</button>
-        </div>
-      </div>
+    <div class="json-panel">
+      <textarea id="json-input">// Sem vlož JSON s jedním ID objektem</textarea>
+      <button id="load-json">Načíst JSON</button>
     </div>
   </div>
 
   <script>
-    // Toggle action body
-    document.querySelectorAll('.action-header').forEach(header => {
-      header.addEventListener('click', () => {
-        const body = header.nextElementSibling;
-        const chevron = header.querySelector('.chevron');
-        const isVisible = body.style.display !== 'none';
-        body.style.display = isVisible ? 'none' : 'block';
-        chevron.textContent = isVisible ? '▸' : '▾';
+    function renderWorkflow(data, container) {
+      container.innerHTML = "";
+
+      if (!data || typeof data !== "object") {
+        container.innerHTML = '<p class="error">❌ JSON není validní objekt.</p>';
+        return;
+      }
+
+      const keys = Object.keys(data);
+      if (keys.length !== 1) {
+        container.innerHTML = '<p class="error">❌ JSON musí obsahovat právě jeden kořenový objekt (např. "7").</p>';
+        return;
+      }
+
+      const id = keys[0];
+      const entry = data[id];
+      const workflow = document.createElement("div");
+      workflow.className = "workflow";
+
+      workflow.innerHTML = `
+        <div class="top-form">
+          <div class="form-item">
+            <label>id</label><input type="text" value="${id}" readonly>
+          </div>
+          <div class="form-item">
+            <label>name</label><input type="text" value="${entry.name ?? ''}">
+          </div>
+          <div class="form-item">
+            <label>status</label><input type="text" value="${entry.status ?? 0}">
+          </div>
+        </div>
+      `;
+
+      if (entry.start) {
+        const startKey = Object.keys(entry.start)[0];
+        const startVal = entry.start[startKey];
+        const startDiv = document.createElement("div");
+        startDiv.innerHTML = `
+          <div class="row">
+            <label>start</label>
+            <select><option>${startKey}</option></select>
+            <input type="text" value="${startVal}">
+          </div>`;
+        workflow.appendChild(startDiv);
+      }
+
+      if (entry.order?.workflow_max_pending !== undefined) {
+        const maxDiv = document.createElement("div");
+        maxDiv.innerHTML = `
+          <div class="row">
+            <label>workflow_max_pending</label>
+            <input type="text" value="${entry.order.workflow_max_pending}">
+          </div>`;
+        workflow.appendChild(maxDiv);
+      }
+
+      const actions = entry.order?.action ?? {};
+      Object.keys(actions).forEach((key) => {
+        const a = actions[key];
+        const div = document.createElement("div");
+        div.className = "action";
+        const targetType = a.target ? Object.keys(a.target)[0] : "";
+        const targetValue = a.target ? a.target[targetType] : "";
+        const eventType = a.event ? Object.keys(a.event)[0] : "";
+        const eventValue = a.event ? a.event[eventType] : "";
+
+        div.innerHTML = `
+          <div class="action-header">
+            <span>Action (${key})</span>
+            <span class="chevron">▾</span>
+          </div>
+          <div class="action-body">
+            <div class="row">
+              <label>action</label><select><option>${a.action}</option></select>
+            </div>
+            ${a.target ? `
+            <div class="row">
+              <label>target</label>
+              <select><option>${targetType}</option></select>
+              <input type="text" value="${targetValue}">
+            </div>` : ""}
+            ${a.event ? `
+            <div class="row">
+              <label>event</label>
+              <select><option>${eventType}</option></select>
+              <select><option>${eventValue}</option></select>
+            </div>` : ""}
+            <a href="#" class="add-attribute" data-popup="popup-${key}">+ add action attribute</a>
+            <div class="attribute-popup" id="popup-${key}">
+              <button>+ event</button>
+              <button>+ max_speed</button>
+              <button>+ max_retries</button>
+              <button>+ acceleration</button>
+              <button>+ autoskip</button>
+            </div>
+          </div>
+        `;
+        workflow.appendChild(div);
       });
+
+      container.appendChild(workflow);
+
+      // toggle collapse
+      workflow.querySelectorAll('.action-header').forEach(header => {
+        header.addEventListener('click', () => {
+          const body = header.nextElementSibling;
+          const chevron = header.querySelector('.chevron');
+          const isVisible = body.style.display !== 'none';
+          body.style.display = isVisible ? 'none' : 'block';
+          chevron.textContent = isVisible ? '▸' : '▾';
+        });
+      });
+
+      // popup toggle
+      workflow.querySelectorAll('.add-attribute').forEach(link => {
+        link.addEventListener('click', e => {
+          e.preventDefault();
+          const popupId = link.dataset.popup;
+          const popup = document.getElementById(popupId);
+          popup.classList.toggle('active');
+        });
+      });
+    }
+
+    document.getElementById("load-json").addEventListener("click", () => {
+      const container = document.getElementById("app");
+      let data;
+      try {
+        data = JSON.parse(document.getElementById("json-input").value);
+      } catch (err) {
+        container.innerHTML = `<p class="error">❌ Nevalidní JSON: ${err.message}</p>`;
+        return;
+      }
+      renderWorkflow(data, container);
     });
 
-    // Toggle attribute popup
-    document.querySelectorAll('.add-attribute').forEach(link => {
-      link.addEventListener('click', e => {
-        e.preventDefault();
-        const popupId = link.dataset.popup;
-        const popup = document.getElementById(popupId);
-        popup.classList.toggle('active');
-      });
-    });
+    // výchozí JSON
+    document.getElementById("json-input").value = JSON.stringify({
+      "7": {
+        "name": "areaA => areaB",
+        "status": 1,
+        "order": {
+          "workflow_max_pending": 2,
+          "action": {
+            "0": {
+              "action": "pickup",
+              "target": { "station": "areaA" }
+            },
+            "1": {
+              "action": "drop",
+              "target": { "station": "areaB" },
+              "event": { "no_station_left": "cancel" }
+            }
+          }
+        }
+      }
+    }, null, 2);
+
+    document.getElementById("load-json").click();
   </script>
 </body>
 </html>
